# SICAE_Firmware_ESPIDF

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/esp_firebase/: CMakeLists.txt  app.cpp
data/: bundle.js  index.html
main/: CMakeLists.txt  IR_utils.c  IR_utils.h  buttons.c  buttons.h  clientcert.pem  deviceType.h  devicesRelay_utils.c  devicesRelay_utils.h  firebaseFns.c  firebaseFns.h  firebase_config.h  globals.h  httpMethods.c  httpMethods.h  lcd_utils.c  lcd_utils.h  main.c  main.cpp  menuTypes.c  menuTypes.h  nec_utils.c  nec_utils.h  ntp.c  ntp.h  nvs_utils.c  nvs_utils.h  servercert.pem  serverkey.pem  spiffs.c  spiffs.h  webserver.c  webserver.h  wifi_utils.c  wifi_utils.h
